--- a/首页.html
+++ b/首页.html
@@ -177,7 +177,7 @@
 				<img src="img/1(1).jpg">
 				<img src="img/2.jpg">
 				<img src="img/3(1).png">
-				<a href="https://1823yangxiaoyun.github.io/bighomework/%E8%AF%A6%E6%83%85%E9%A1%B5.html"><img src="img/qqq.png"></a>
+				<a href="https://1823yangxiaoyun.github.io/lastWork/%E8%AF%A6%E6%83%85%E9%A1%B5"><img src="img/qqq.png"></a>
 			</div>
     	</div>	
     	<div id="box23">
