--- a/详情页.html
+++ b/详情页.html
@@ -51,7 +51,7 @@
 <div id="box2">
 	<div id="box21">
 		<ul class="head">
-		<a href=""><li>首页</li> </a>
+			<a href="https://1823yangxiaoyun.github.io/lastWork/%E9%A6%96%E9%A1%B5.html"><li>首页</li> </a>
 			<li>热门品牌</li> 
 			<li>美妆个户</li> 
 			<li>服饰鞋包</li> 
